<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:background="@drawable/back"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/info_mainActivity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="38sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/dataButton_mainActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/edit_data"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights"
                android:onClick="onClickEditData"/>

            <Button
                android:id="@+id/preferencesButton_mainActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/edit_preferences"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                android:onClick="onClickOpenPreferences"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/startButton_mainActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/start_capture"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights"
                android:onClick="onClickStartCapture"/>

            <Button
                android:id="@+id/stopButton_mainActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/stop_capture"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                android:onClick="onClickStopCapture"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>